<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ruleRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_gray_normal"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollRule"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical" >

        <RelativeLayout
            android:id="@+id/ruleMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_gray_normal"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ruleArea0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dip"
                android:background="@color/background_gray_light"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/ruleHead0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dip"
                    android:text="@string/rules_number_topic"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/font_color_deep" />

                <RelativeLayout
                    android:id="@+id/ruleZone0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dip"
                    android:background="@color/background_gray_light"
                    android:orientation="horizontal" >

                    <NumberPicker
                        android:id="@+id/ruleNumberPicker2"
                        android:layout_width="50dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true" >
                    </NumberPicker>

                    <TextView
                        android:id="@+id/text1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_toRightOf="@id/ruleNumberPicker2"
                        android:text="@string/rules_number_class2" />

                    <TextView
                        android:id="@+id/text0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_toLeftOf="@id/ruleNumberPicker2"
                        android:text="@string/rules_number_class1" />

                    <NumberPicker
                        android:id="@+id/ruleNumberPicker1"
                        android:layout_width="50dp"
                        android:layout_height="100dp"
                        android:layout_toLeftOf="@id/text0"
                        android:focusable="true"
                        android:focusableInTouchMode="true" >
                    </NumberPicker>

                    <NumberPicker
                        android:id="@+id/ruleNumberPicker3"
                        android:layout_width="50dp"
                        android:layout_height="100dp"
                        android:layout_toRightOf="@id/text1"
                        android:focusable="true"
                        android:focusableInTouchMode="true" >
                    </NumberPicker>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_toRightOf="@id/ruleNumberPicker3"
                        android:text="@string/rules_number_class3" />
                </RelativeLayout>

                <View
                    android:id="@+id/divideLine0"
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="?android:attr/listDivider" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/createShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/background_color_deep"
        android:text="@string/rules_produce_button"
        android:textSize="22sp" >
    </Button>

</RelativeLayout>